fix cover-photo__overlay z-index which was overlapping UI components

--- a/stylesheets/pages/caller.scss
+++ b/stylesheets/pages/caller.scss
@@ -1,5 +1,5 @@
 .cover-photo__overlay {
-  z-index: 1000;
+  z-index: 300;
 }
 
 .caller-header {
